--- a/fix-defects/libp2p/stream/bufferstream.html
+++ b/fix-defects/libp2p/stream/bufferstream.html
@@ -403,7 +403,7 @@ class="link-seesrc" target="_blank">Source</a>
 <h1><a class="toc-backref" href="#14">Methods</a></h1>
 <dl class="item">
 <div id="atEof.e,BufferStream" class="tohide">
-<dt><pre><span class="Keyword">method</span> <a href="#atEof.e%2CBufferStream"><span class="Identifier">atEof</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="bufferstream.html#BufferStream"><span class="Identifier">BufferStream</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dt><pre><span class="Keyword">method</span> <a href="#atEof.e%2CBufferStream"><span class="Identifier">atEof</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="bufferstream.html#BufferStream"><span class="Identifier">BufferStream</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -511,7 +511,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-19 10:16:16 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-27 06:31:08 UTC</small>
       </div>
     </div>
   </div>
