--- a/unstable/libp2p/protocols/pubsub/mcache.html
+++ b/unstable/libp2p/protocols/pubsub/mcache.html
@@ -207,11 +207,11 @@ window.addEventListener("DOMContentLoaded", main2);
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#CacheEntry"
     title="CacheEntry = object
-  mid*: MessageID
+  mid*: MessageId
   topicIDs*: seq[string]">CacheEntry</a></li>
   <li><a class="reference" href="#MCache"
     title="MCache = object of RootObj
-  msgs*: Table[MessageID, Message]
+  msgs*: Table[MessageId, Message]
   history*: seq[seq[CacheEntry]]
   windowSize*: Natural">MCache</a></li>
 
@@ -221,13 +221,13 @@ window.addEventListener("DOMContentLoaded", main2);
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">contains
-      <li><a class="reference" href="#contains%2CMCache%2CMessageID"
-    title="contains(c: MCache; mid: MessageID): bool">contains(c: MCache; mid: MessageID): bool</a></li>
+      <li><a class="reference" href="#contains%2CMCache%2CMessageId"
+    title="contains(c: MCache; mid: MessageId): bool">contains(c: MCache; mid: MessageId): bool</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">get
-      <li><a class="reference" href="#get%2CMCache%2CMessageID"
-    title="get(c: MCache; mid: MessageID): Option[Message]">get(c: MCache; mid: MessageID): Option[Message]</a></li>
+      <li><a class="reference" href="#get%2CMCache%2CMessageId"
+    title="get(c: MCache; mid: MessageId): Option[Message]">get(c: MCache; mid: MessageId): Option[Message]</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">init
@@ -236,8 +236,8 @@ window.addEventListener("DOMContentLoaded", main2);
 
   </ul>
   <ul class="simple nested-toc-section">put
-      <li><a class="reference" href="#put%2CMCache%2CMessageID%2CMessage"
-    title="put(c: var MCache; msgId: MessageID; msg: Message)">put(c: var MCache; msgId: MessageID; msg: Message)</a></li>
+      <li><a class="reference" href="#put%2CMCache%2CMessageId%2CMessage"
+    title="put(c: var MCache; msgId: MessageId; msg: Message)">put(c: var MCache; msgId: MessageId; msg: Message)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">shift
@@ -247,7 +247,7 @@ window.addEventListener("DOMContentLoaded", main2);
   </ul>
   <ul class="simple nested-toc-section">window
       <li><a class="reference" href="#window%2CMCache%2Cstring"
-    title="window(c: MCache; topic: string): HashSet[MessageID]">window(c: MCache; topic: string): HashSet[MessageID]</a></li>
+    title="window(c: MCache; topic: string): HashSet[MessageId]">window(c: MCache; topic: string): HashSet[MessageId]</a></li>
 
   </ul>
 
@@ -282,7 +282,7 @@ class="link-seesrc" target="_blank">Source</a>
 <dl class="item">
 <div id="CacheEntry" class="tohide">
 <dt><pre><a href="mcache.html#CacheEntry"><span class="Identifier">CacheEntry</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
-  <span class="Identifier">mid</span><span class="Operator">*</span><span class="Other">:</span> <a href="rpc/messages.html#MessageID"><span class="Identifier">MessageID</span></a>
+  <span class="Identifier">mid</span><span class="Operator">*</span><span class="Other">:</span> <a href="rpc/messages.html#MessageId"><span class="Identifier">MessageId</span></a>
   <span class="Identifier">topicIDs</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span>
 </pre></dt>
 <dd>
@@ -297,7 +297,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="MCache" class="tohide">
 <dt><pre><a href="mcache.html#MCache"><span class="Identifier">MCache</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">RootObj</span>
-  <span class="Identifier">msgs</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Table</span><span class="Other">[</span><a href="rpc/messages.html#MessageID"><span class="Identifier">MessageID</span></a><span class="Other">,</span> <a href="rpc/messages.html#Message"><span class="Identifier">Message</span></a><span class="Other">]</span>
+  <span class="Identifier">msgs</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Table</span><span class="Other">[</span><a href="rpc/messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">,</span> <a href="rpc/messages.html#Message"><span class="Identifier">Message</span></a><span class="Other">]</span>
   <span class="Identifier">history</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">seq</span><span class="Other">[</span><a href="mcache.html#CacheEntry"><span class="Identifier">CacheEntry</span></a><span class="Other">]</span><span class="Other">]</span>
   <span class="Identifier">windowSize</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Natural</span>
 </pre></dt>
@@ -316,8 +316,8 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<div id="contains,MCache,MessageID" class="tohide">
-<dt><pre><span class="Keyword">func</span> <a href="#contains%2CMCache%2CMessageID"><span class="Identifier">contains</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <a href="mcache.html#MCache"><span class="Identifier">MCache</span></a><span class="Other">;</span> <span class="Identifier">mid</span><span class="Other">:</span> <a href="rpc/messages.html#MessageID"><span class="Identifier">MessageID</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<div id="contains,MCache,MessageId" class="tohide">
+<dt><pre><span class="Keyword">func</span> <a href="#contains%2CMCache%2CMessageId"><span class="Identifier">contains</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <a href="mcache.html#MCache"><span class="Identifier">MCache</span></a><span class="Other">;</span> <span class="Identifier">mid</span><span class="Other">:</span> <a href="rpc/messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -328,8 +328,8 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
-<div id="get,MCache,MessageID" class="tohide">
-<dt><pre><span class="Keyword">func</span> <a href="#get%2CMCache%2CMessageID"><span class="Identifier">get</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <a href="mcache.html#MCache"><span class="Identifier">MCache</span></a><span class="Other">;</span> <span class="Identifier">mid</span><span class="Other">:</span> <a href="rpc/messages.html#MessageID"><span class="Identifier">MessageID</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="rpc/messages.html#Message"><span class="Identifier">Message</span></a><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span>
+<div id="get,MCache,MessageId" class="tohide">
+<dt><pre><span class="Keyword">func</span> <a href="#get%2CMCache%2CMessageId"><span class="Identifier">get</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <a href="mcache.html#MCache"><span class="Identifier">MCache</span></a><span class="Other">;</span> <span class="Identifier">mid</span><span class="Other">:</span> <a href="rpc/messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="rpc/messages.html#Message"><span class="Identifier">Message</span></a><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
@@ -353,8 +353,8 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
-<div id="put,MCache,MessageID,Message" class="tohide">
-<dt><pre><span class="Keyword">func</span> <a href="#put%2CMCache%2CMessageID%2CMessage"><span class="Identifier">put</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="mcache.html#MCache"><span class="Identifier">MCache</span></a><span class="Other">;</span> <span class="Identifier">msgId</span><span class="Other">:</span> <a href="rpc/messages.html#MessageID"><span class="Identifier">MessageID</span></a><span class="Other">;</span> <span class="Identifier">msg</span><span class="Other">:</span> <a href="rpc/messages.html#Message"><span class="Identifier">Message</span></a><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span>
+<div id="put,MCache,MessageId,Message" class="tohide">
+<dt><pre><span class="Keyword">func</span> <a href="#put%2CMCache%2CMessageId%2CMessage"><span class="Identifier">put</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="mcache.html#MCache"><span class="Identifier">MCache</span></a><span class="Other">;</span> <span class="Identifier">msgId</span><span class="Other">:</span> <a href="rpc/messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">;</span> <span class="Identifier">msg</span><span class="Other">:</span> <a href="rpc/messages.html#Message"><span class="Identifier">Message</span></a><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
@@ -379,7 +379,7 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="window,MCache,string" class="tohide">
-<dt><pre><span class="Keyword">func</span> <a href="#window%2CMCache%2Cstring"><span class="Identifier">window</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <a href="mcache.html#MCache"><span class="Identifier">MCache</span></a><span class="Other">;</span> <span class="Identifier">topic</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">HashSet</span><span class="Other">[</span><a href="rpc/messages.html#MessageID"><span class="Identifier">MessageID</span></a><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span>
+<dt><pre><span class="Keyword">func</span> <a href="#window%2CMCache%2Cstring"><span class="Identifier">window</span></a><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <a href="mcache.html#MCache"><span class="Identifier">MCache</span></a><span class="Other">;</span> <span class="Identifier">topic</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">HashSet</span><span class="Other">[</span><a href="rpc/messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
@@ -396,7 +396,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="19">
 <h1><a class="toc-backref" href="#19">Exports</a></h1>
 <dl class="item">
-<a href="rpc/messages.html#withSubs,typeRPCMsg,openArray[string],bool"><span class="Identifier">withSubs</span></a>, <a href="rpc/messages.html#PeerInfoMsg"><span class="Identifier">PeerInfoMsg</span></a>, <a href="rpc/messages.html#ControlIHave"><span class="Identifier">ControlIHave</span></a>, <a href="rpc/messages.html#ControlMessage"><span class="Identifier">ControlMessage</span></a>, <a href="rpc/messages.html#ControlGraft"><span class="Identifier">ControlGraft</span></a>, <a href="rpc/messages.html#shortLog,ControlIHave"><span class="Identifier">shortLog</span></a>, <a href="rpc/messages.html#SubOpts"><span class="Identifier">SubOpts</span></a>, <a href="rpc/messages.html#shortLog,ControlGraft"><span class="Identifier">shortLog</span></a>, <a href="rpc/messages.html#shortLog,Message"><span class="Identifier">shortLog</span></a>, <a href="rpc/messages.html#RPCMsg"><span class="Identifier">RPCMsg</span></a>, <a href="rpc/messages.html#MessageID"><span class="Identifier">MessageID</span></a>, <a href="rpc/messages.html#ControlPrune"><span class="Identifier">ControlPrune</span></a>, <a href="rpc/messages.html#ControlIWant"><span class="Identifier">ControlIWant</span></a>, <a href="rpc/messages.html#shortLog,ControlMessage"><span class="Identifier">shortLog</span></a>, <a href="rpc/messages.html#shortLog,ControlIWant"><span class="Identifier">shortLog</span></a>, <a href="rpc/messages.html#shortLog,RPCMsg"><span class="Identifier">shortLog</span></a>, <a href="rpc/messages.html#Message"><span class="Identifier">Message</span></a>, <a href="rpc/messages.html#shortLog,ControlPrune"><span class="Identifier">shortLog</span></a>
+<a href="rpc/messages.html#withSubs,typeRPCMsg,openArray[string],bool"><span class="Identifier">withSubs</span></a>, <a href="rpc/messages.html#PeerInfoMsg"><span class="Identifier">PeerInfoMsg</span></a>, <a href="rpc/messages.html#ControlIHave"><span class="Identifier">ControlIHave</span></a>, <a href="rpc/messages.html#ControlMessage"><span class="Identifier">ControlMessage</span></a>, <a href="rpc/messages.html#ControlGraft"><span class="Identifier">ControlGraft</span></a>, <a href="rpc/messages.html#shortLog,ControlIHave"><span class="Identifier">shortLog</span></a>, <a href="rpc/messages.html#SubOpts"><span class="Identifier">SubOpts</span></a>, <a href="rpc/messages.html#shortLog,ControlGraft"><span class="Identifier">shortLog</span></a>, <a href="rpc/messages.html#shortLog,Message"><span class="Identifier">shortLog</span></a>, <a href="rpc/messages.html#RPCMsg"><span class="Identifier">RPCMsg</span></a>, <a href="rpc/messages.html#MessageId"><span class="Identifier">MessageId</span></a>, <a href="rpc/messages.html#ControlPrune"><span class="Identifier">ControlPrune</span></a>, <a href="rpc/messages.html#ControlIWant"><span class="Identifier">ControlIWant</span></a>, <a href="rpc/messages.html#shortLog,ControlMessage"><span class="Identifier">shortLog</span></a>, <a href="rpc/messages.html#shortLog,ControlIWant"><span class="Identifier">shortLog</span></a>, <a href="rpc/messages.html#shortLog,RPCMsg"><span class="Identifier">shortLog</span></a>, <a href="rpc/messages.html#Message"><span class="Identifier">Message</span></a>, <a href="rpc/messages.html#shortLog,ControlPrune"><span class="Identifier">shortLog</span></a>
 </dl></div>
 
   </div>
@@ -406,7 +406,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-26 11:56:38 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-27 13:54:42 UTC</small>
       </div>
     </div>
   </div>
