--- a/unstable/libp2p/protocols/pubsub/pubsub.html
+++ b/unstable/libp2p/protocols/pubsub/pubsub.html
@@ -240,7 +240,7 @@ window.addEventListener("DOMContentLoaded", main2);
   <li><a class="reference" href="#libp2p_pubsub_received_unsubscriptions"
     title="libp2p_pubsub_received_unsubscriptions = IgnoredCollector">libp2p_pubsub_received_unsubscriptions</a></li>
   <li><a class="reference" href="#MsgIdProvider"
-    title="MsgIdProvider {.public.} = proc (m: Message): Result[MessageID, ValidationResult] {.
+    title="MsgIdProvider {.public.} = proc (m: Message): Result[MessageId, ValidationResult] {.
     noSideEffect, raises: [Defect], gcsafe.}">MsgIdProvider</a></li>
   <li><a class="reference" href="#PubSub"
     title="PubSub {.public.} = ref object of LPProtocol
@@ -669,7 +669,7 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="MsgIdProvider" class="tohide">
-<dt><pre><a href="pubsub.html#MsgIdProvider"><span class="Identifier">MsgIdProvider</span></a> {.<span class="Identifier">public</span>.} <span class="Other">=</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">m</span><span class="Other">:</span> <a href="rpc/messages.html#Message"><span class="Identifier">Message</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Result</span><span class="Other">[</span><a href="rpc/messages.html#MessageID"><span class="Identifier">MessageID</span></a><span class="Other">,</span> <a href="errors.html#ValidationResult"><span class="Identifier">ValidationResult</span></a><span class="Other">]</span> {.
+<dt><pre><a href="pubsub.html#MsgIdProvider"><span class="Identifier">MsgIdProvider</span></a> {.<span class="Identifier">public</span>.} <span class="Other">=</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">m</span><span class="Other">:</span> <a href="rpc/messages.html#Message"><span class="Identifier">Message</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Result</span><span class="Other">[</span><a href="rpc/messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">,</span> <a href="errors.html#ValidationResult"><span class="Identifier">ValidationResult</span></a><span class="Other">]</span> {.
     <span class="Identifier">noSideEffect</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">gcsafe</span></span>.}</pre></dt>
 <dd>
 
@@ -1160,7 +1160,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-26 11:56:37 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-27 13:54:42 UTC</small>
       </div>
     </div>
   </div>
