--- a/unstable/libp2p/protocols/pubsub/mcache.html
+++ b/unstable/libp2p/protocols/pubsub/mcache.html
@@ -208,7 +208,7 @@ window.addEventListener("DOMContentLoaded", main2);
       <li><a class="reference" href="#CacheEntry"
     title="CacheEntry = object
   mid*: MessageId
-  topicIDs*: seq[string]">CacheEntry</a></li>
+  topicIds*: seq[string]">CacheEntry</a></li>
   <li><a class="reference" href="#MCache"
     title="MCache = object of RootObj
   msgs*: Table[MessageId, Message]
@@ -283,7 +283,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div id="CacheEntry" class="tohide">
 <dt><pre><a href="mcache.html#CacheEntry"><span class="Identifier">CacheEntry</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
   <span class="Identifier">mid</span><span class="Operator">*</span><span class="Other">:</span> <a href="rpc/messages.html#MessageId"><span class="Identifier">MessageId</span></a>
-  <span class="Identifier">topicIDs</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span>
+  <span class="Identifier">topicIds</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span>
 </pre></dt>
 <dd>
 
@@ -406,7 +406,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-27 13:54:42 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-27 17:16:38 UTC</small>
       </div>
     </div>
   </div>
