--- a/unstable/libp2p/protocols/pubsub/pubsub.html
+++ b/unstable/libp2p/protocols/pubsub/pubsub.html
@@ -393,8 +393,8 @@ window.addEventListener("DOMContentLoaded", main2);
 
   </ul>
   <ul class="simple nested-toc-section">onPubSubPeerEvent
-      <li><a class="reference" href="#onPubSubPeerEvent.e%2CPubSub%2CPubSubPeer%2CPubsubPeerEvent"
-    title="onPubSubPeerEvent(p: PubSub; peer: PubSubPeer; event: PubsubPeerEvent)">onPubSubPeerEvent(p: PubSub; peer: PubSubPeer; event: PubsubPeerEvent)</a></li>
+      <li><a class="reference" href="#onPubSubPeerEvent.e%2CPubSub%2CPubSubPeer%2CPubSubPeerEvent"
+    title="onPubSubPeerEvent(p: PubSub; peer: PubSubPeer; event: PubSubPeerEvent)">onPubSubPeerEvent(p: PubSub; peer: PubSubPeer; event: PubSubPeerEvent)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">onTopicSubscription
@@ -1036,8 +1036,8 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
-<div id="onPubSubPeerEvent.e,PubSub,PubSubPeer,PubsubPeerEvent" class="tohide">
-<dt><pre><span class="Keyword">method</span> <a href="#onPubSubPeerEvent.e%2CPubSub%2CPubSubPeer%2CPubsubPeerEvent"><span class="Identifier">onPubSubPeerEvent</span></a><span class="Other">(</span><span class="Identifier">p</span><span class="Other">:</span> <a href="pubsub.html#PubSub"><span class="Identifier">PubSub</span></a><span class="Other">;</span> <span class="Identifier">peer</span><span class="Other">:</span> <a href="pubsubpeer.html#PubSubPeer"><span class="Identifier">PubSubPeer</span></a><span class="Other">;</span> <span class="Identifier">event</span><span class="Other">:</span> <a href="pubsubpeer.html#PubsubPeerEvent"><span class="Identifier">PubsubPeerEvent</span></a><span class="Other">)</span> {.
+<div id="onPubSubPeerEvent.e,PubSub,PubSubPeer,PubSubPeerEvent" class="tohide">
+<dt><pre><span class="Keyword">method</span> <a href="#onPubSubPeerEvent.e%2CPubSub%2CPubSubPeer%2CPubSubPeerEvent"><span class="Identifier">onPubSubPeerEvent</span></a><span class="Other">(</span><span class="Identifier">p</span><span class="Other">:</span> <a href="pubsub.html#PubSub"><span class="Identifier">PubSub</span></a><span class="Other">;</span> <span class="Identifier">peer</span><span class="Other">:</span> <a href="pubsubpeer.html#PubSubPeer"><span class="Identifier">PubSubPeer</span></a><span class="Other">;</span> <span class="Identifier">event</span><span class="Other">:</span> <a href="pubsubpeer.html#PubSubPeerEvent"><span class="Identifier">PubSubPeerEvent</span></a><span class="Other">)</span> {.
     <span class="Identifier">base</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">,</span> <span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">TimeEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
@@ -1160,7 +1160,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-27 13:54:42 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-27 17:16:38 UTC</small>
       </div>
     </div>
   </div>
