--- a/unstable/libp2p/protocols/pubsub/rpc/messages.html
+++ b/unstable/libp2p/protocols/pubsub/rpc/messages.html
@@ -211,10 +211,10 @@ window.addEventListener("DOMContentLoaded", main2);
   <li><a class="reference" href="#ControlIHave"
     title="ControlIHave = object
   topicId*: string
-  messageIDs*: seq[MessageId]">ControlIHave</a></li>
+  messageIds*: seq[MessageId]">ControlIHave</a></li>
   <li><a class="reference" href="#ControlIWant"
     title="ControlIWant = object
-  messageIDs*: seq[MessageId]">ControlIWant</a></li>
+  messageIds*: seq[MessageId]">ControlIWant</a></li>
   <li><a class="reference" href="#ControlMessage"
     title="ControlMessage = object
   ihave*: seq[ControlIHave]
@@ -231,7 +231,7 @@ window.addEventListener("DOMContentLoaded", main2);
   fromPeer*: PeerId
   data*: seq[byte]
   seqno*: seq[byte]
-  topicIDs*: seq[string]
+  topicIds*: seq[string]
   signature*: seq[byte]
   key*: seq[byte]">Message</a></li>
   <li><a class="reference" href="#MessageId"
@@ -318,7 +318,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div id="ControlIHave" class="tohide">
 <dt><pre><a href="messages.html#ControlIHave"><span class="Identifier">ControlIHave</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
   <span class="Identifier">topicId</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">string</span>
-  <span class="Identifier">messageIDs</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">]</span>
+  <span class="Identifier">messageIds</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">]</span>
 </pre></dt>
 <dd>
 
@@ -332,7 +332,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="ControlIWant" class="tohide">
 <dt><pre><a href="messages.html#ControlIWant"><span class="Identifier">ControlIWant</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
-  <span class="Identifier">messageIDs</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">]</span>
+  <span class="Identifier">messageIds</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">]</span>
 </pre></dt>
 <dd>
 
@@ -382,7 +382,7 @@ class="link-seesrc" target="_blank">Source</a>
   <span class="Identifier">fromPeer</span><span class="Operator">*</span><span class="Other">:</span> <a href="../../../peerid.html#PeerId"><span class="Identifier">PeerId</span></a>
   <span class="Identifier">data</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span>
   <span class="Identifier">seqno</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span>
-  <span class="Identifier">topicIDs</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span>
+  <span class="Identifier">topicIds</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span>
   <span class="Identifier">signature</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span>
   <span class="Identifier">key</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span>
 </pre></dt>
@@ -566,7 +566,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-27 13:54:42 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-27 17:16:37 UTC</small>
       </div>
     </div>
   </div>
