--- a/test-nim16/libp2p/protocols/pubsub/gossipsub/types.html
+++ b/test-nim16/libp2p/protocols/pubsub/gossipsub/types.html
@@ -315,7 +315,7 @@ window.addEventListener("DOMContentLoaded", main2);
   invalidMessageDeliveriesWeight*: float64
   invalidMessageDeliveriesDecay*: float64">TopicParams</a></li>
   <li><a class="reference" href="#ValidationSeenTable"
-    title="ValidationSeenTable = Table[MessageID, HashSet[PubSubPeer]]">ValidationSeenTable</a></li>
+    title="ValidationSeenTable = Table[MessageId, HashSet[PubSubPeer]]">ValidationSeenTable</a></li>
 
   </ul>
 </li>
@@ -580,7 +580,7 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="ValidationSeenTable" class="tohide">
-<dt><pre><a href="types.html#ValidationSeenTable"><span class="Identifier">ValidationSeenTable</span></a> <span class="Other">=</span> <span class="Identifier">Table</span><span class="Other">[</span><a href="../rpc/messages.html#MessageID"><span class="Identifier">MessageID</span></a><span class="Other">,</span> <span class="Identifier">HashSet</span><span class="Other">[</span><a href="../pubsubpeer.html#PubSubPeer"><span class="Identifier">PubSubPeer</span></a><span class="Other">]</span><span class="Other">]</span></pre></dt>
+<dt><pre><a href="types.html#ValidationSeenTable"><span class="Identifier">ValidationSeenTable</span></a> <span class="Other">=</span> <span class="Identifier">Table</span><span class="Other">[</span><a href="../rpc/messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">,</span> <span class="Identifier">HashSet</span><span class="Other">[</span><a href="../pubsubpeer.html#PubSubPeer"><span class="Identifier">PubSubPeer</span></a><span class="Other">]</span><span class="Other">]</span></pre></dt>
 <dd>
 
 
@@ -774,7 +774,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-27 08:24:32 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-29 16:09:38 UTC</small>
       </div>
     </div>
   </div>
