--- a/discoveryInterface/libp2p/protocols/pubsub/rpc/message.html
+++ b/discoveryInterface/libp2p/protocols/pubsub/rpc/message.html
@@ -207,7 +207,7 @@ window.addEventListener("DOMContentLoaded", main2);
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">defaultMsgIdProvider
       <li><a class="reference" href="#defaultMsgIdProvider%2CMessage"
-    title="defaultMsgIdProvider(m: Message): Result[MessageID, ValidationResult]">defaultMsgIdProvider(m: Message): Result[MessageID, ValidationResult]</a></li>
+    title="defaultMsgIdProvider(m: Message): Result[MessageId, ValidationResult]">defaultMsgIdProvider(m: Message): Result[MessageId, ValidationResult]</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">init
@@ -262,7 +262,7 @@ class="link-seesrc" target="_blank">Source</a>
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
 <div id="defaultMsgIdProvider,Message" class="tohide">
-<dt><pre><span class="Keyword">func</span> <a href="#defaultMsgIdProvider%2CMessage"><span class="Identifier">defaultMsgIdProvider</span></a><span class="Other">(</span><span class="Identifier">m</span><span class="Other">:</span> <a href="messages.html#Message"><span class="Identifier">Message</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Result</span><span class="Other">[</span><a href="messages.html#MessageID"><span class="Identifier">MessageID</span></a><span class="Other">,</span> <a href="../errors.html#ValidationResult"><span class="Identifier">ValidationResult</span></a><span class="Other">]</span> {.
+<dt><pre><span class="Keyword">func</span> <a href="#defaultMsgIdProvider%2CMessage"><span class="Identifier">defaultMsgIdProvider</span></a><span class="Other">(</span><span class="Identifier">m</span><span class="Other">:</span> <a href="messages.html#Message"><span class="Identifier">Message</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Result</span><span class="Other">[</span><a href="messages.html#MessageId"><span class="Identifier">MessageId</span></a><span class="Other">,</span> <a href="../errors.html#ValidationResult"><span class="Identifier">ValidationResult</span></a><span class="Other">]</span> {.
     <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
@@ -332,7 +332,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="19">
 <h1><a class="toc-backref" href="#19">Exports</a></h1>
 <dl class="item">
-<a href="../errors.html#ValidationResult"><span class="Identifier">ValidationResult</span></a>, <a href="messages.html#withSubs,typeRPCMsg,openArray[string],bool"><span class="Identifier">withSubs</span></a>, <a href="messages.html#PeerInfoMsg"><span class="Identifier">PeerInfoMsg</span></a>, <a href="messages.html#ControlIHave"><span class="Identifier">ControlIHave</span></a>, <a href="messages.html#ControlMessage"><span class="Identifier">ControlMessage</span></a>, <a href="messages.html#ControlGraft"><span class="Identifier">ControlGraft</span></a>, <a href="messages.html#shortLog,ControlIHave"><span class="Identifier">shortLog</span></a>, <a href="messages.html#SubOpts"><span class="Identifier">SubOpts</span></a>, <a href="messages.html#shortLog,ControlGraft"><span class="Identifier">shortLog</span></a>, <a href="messages.html#shortLog,Message"><span class="Identifier">shortLog</span></a>, <a href="messages.html#RPCMsg"><span class="Identifier">RPCMsg</span></a>, <a href="messages.html#MessageID"><span class="Identifier">MessageID</span></a>, <a href="messages.html#ControlPrune"><span class="Identifier">ControlPrune</span></a>, <a href="messages.html#ControlIWant"><span class="Identifier">ControlIWant</span></a>, <a href="messages.html#shortLog,ControlMessage"><span class="Identifier">shortLog</span></a>, <a href="messages.html#shortLog,ControlIWant"><span class="Identifier">shortLog</span></a>, <a href="messages.html#shortLog,RPCMsg"><span class="Identifier">shortLog</span></a>, <a href="messages.html#Message"><span class="Identifier">Message</span></a>, <a href="messages.html#shortLog,ControlPrune"><span class="Identifier">shortLog</span></a>
+<a href="../errors.html#ValidationResult"><span class="Identifier">ValidationResult</span></a>, <a href="messages.html#withSubs,typeRPCMsg,openArray[string],bool"><span class="Identifier">withSubs</span></a>, <a href="messages.html#PeerInfoMsg"><span class="Identifier">PeerInfoMsg</span></a>, <a href="messages.html#ControlIHave"><span class="Identifier">ControlIHave</span></a>, <a href="messages.html#ControlMessage"><span class="Identifier">ControlMessage</span></a>, <a href="messages.html#ControlGraft"><span class="Identifier">ControlGraft</span></a>, <a href="messages.html#shortLog,ControlIHave"><span class="Identifier">shortLog</span></a>, <a href="messages.html#SubOpts"><span class="Identifier">SubOpts</span></a>, <a href="messages.html#shortLog,ControlGraft"><span class="Identifier">shortLog</span></a>, <a href="messages.html#shortLog,Message"><span class="Identifier">shortLog</span></a>, <a href="messages.html#RPCMsg"><span class="Identifier">RPCMsg</span></a>, <a href="messages.html#MessageId"><span class="Identifier">MessageId</span></a>, <a href="messages.html#ControlPrune"><span class="Identifier">ControlPrune</span></a>, <a href="messages.html#ControlIWant"><span class="Identifier">ControlIWant</span></a>, <a href="messages.html#shortLog,ControlMessage"><span class="Identifier">shortLog</span></a>, <a href="messages.html#shortLog,ControlIWant"><span class="Identifier">shortLog</span></a>, <a href="messages.html#shortLog,RPCMsg"><span class="Identifier">shortLog</span></a>, <a href="messages.html#Message"><span class="Identifier">Message</span></a>, <a href="messages.html#shortLog,ControlPrune"><span class="Identifier">shortLog</span></a>
 </dl></div>
 
   </div>
@@ -342,7 +342,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-01 14:45:06 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-01 14:47:06 UTC</small>
       </div>
     </div>
   </div>
