--- a/discoveryInterface/libp2p/stream/chronosstream.html
+++ b/discoveryInterface/libp2p/stream/chronosstream.html
@@ -259,6 +259,11 @@ window.addEventListener("DOMContentLoaded", main2);
     title="closeImpl(s: ChronosStream): Future[void]">closeImpl(s: ChronosStream): Future[void]</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">getWrapped
+      <li><a class="reference" href="#getWrapped.e%2CChronosStream"
+    title="getWrapped(s: ChronosStream): Connection">getWrapped(s: ChronosStream): Connection</a></li>
+
+  </ul>
   <ul class="simple nested-toc-section">initStream
       <li><a class="reference" href="#initStream.e%2CChronosStream"
     title="initStream(s: ChronosStream)">initStream(s: ChronosStream)</a></li>
@@ -417,6 +422,18 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="getWrapped.e,ChronosStream" class="tohide">
+<dt><pre><span class="Keyword">method</span> <a href="#getWrapped.e%2CChronosStream"><span class="Identifier">getWrapped</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="chronosstream.html#ChronosStream"><span class="Identifier">ChronosStream</span></a><span class="Other">)</span><span class="Other">:</span> <a href="connection.html#Connection"><span class="Identifier">Connection</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/stream/chronosstream.nim#L160"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L160" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="initStream.e,ChronosStream" class="tohide">
 <dt><pre><span class="Keyword">method</span> <a href="#initStream.e%2CChronosStream"><span class="Identifier">initStream</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="chronosstream.html#ChronosStream"><span class="Identifier">ChronosStream</span></a><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span>
                                       <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">TimeEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
@@ -484,7 +501,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-01 14:45:05 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-01 14:47:04 UTC</small>
       </div>
     </div>
   </div>
