--- a/discoveryInterface/libp2p/transports/wstransport.html
+++ b/discoveryInterface/libp2p/transports/wstransport.html
@@ -274,6 +274,11 @@ window.addEventListener("DOMContentLoaded", main2);
     title="closeImpl(s: WsStream): Future[void]">closeImpl(s: WsStream): Future[void]</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">getWrapped
+      <li><a class="reference" href="#getWrapped.e%2CWsStream"
+    title="getWrapped(s: WsStream): Connection">getWrapped(s: WsStream): Connection</a></li>
+
+  </ul>
   <ul class="simple nested-toc-section">handles
       <li><a class="reference" href="#handles.e%2CWsTransport%2CMultiAddress"
     title="handles(t: WsTransport; address: MultiAddress): bool">handles(t: WsTransport; address: MultiAddress): bool</a></li>
@@ -347,9 +352,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/transports/wstransport.nim#L91"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/transports/wstransport.nim#L93"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L91" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L93" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -398,9 +403,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 Creates a clear-text WebSocket transport
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/transports/wstransport.nim#L332"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/transports/wstransport.nim#L334"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L332" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L334" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -415,9 +420,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 Creates a secure WebSocket transport
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/transports/wstransport.nim#L310"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/transports/wstransport.nim#L312"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L310" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L312" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -427,9 +432,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/transports/wstransport.nim#L106"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/transports/wstransport.nim#L108"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L106" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L108" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -446,9 +451,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 accept a new WS connection 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/transports/wstransport.nim#L230"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/transports/wstransport.nim#L232"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L230" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L232" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -465,6 +470,18 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="getWrapped.e,WsStream" class="tohide">
+<dt><pre><span class="Keyword">method</span> <a href="#getWrapped.e%2CWsStream"><span class="Identifier">getWrapped</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">WsStream</span><span class="Other">)</span><span class="Other">:</span> <a href="../stream/connection.html#Connection"><span class="Identifier">Connection</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/transports/wstransport.nim#L90"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L90" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="handles.e,WsTransport,MultiAddress" class="tohide">
 <dt><pre><span class="Keyword">method</span> <a href="#handles.e%2CWsTransport%2CMultiAddress"><span class="Identifier">handles</span></a><span class="Other">(</span><span class="Identifier">t</span><span class="Other">:</span> <a href="wstransport.html#WsTransport"><span class="Identifier">WsTransport</span></a><span class="Other">;</span> <span class="Identifier">address</span><span class="Other">:</span> <a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span>
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
@@ -472,9 +489,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/transports/wstransport.nim#L305"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/transports/wstransport.nim#L307"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L305" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L307" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -500,9 +517,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 listen on the transport 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/transports/wstransport.nim#L111"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/transports/wstransport.nim#L113"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L111" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L113" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -513,9 +530,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 stop the transport 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/transports/wstransport.nim#L165"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/transports/wstransport.nim#L167"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L165" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L167" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -547,7 +564,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-01 14:45:06 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-01 14:47:06 UTC</small>
       </div>
     </div>
   </div>
